Minor improvement to project desc

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ Java UUID Generator (JUG) is a Java library for generating
 Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
 It can be used either as a component in a bigger application, or as a standalone command line tool.
 JUG generates UUIDs according to the IETF UUID draft specification.
-JUG supports all 3 official UUID generation methods.
+JUG supports 3 original official UUID generation methods as well as later additions (v6, v7)
 </description>
   <url>https://github.com/cowtowncoder/java-uuid-generator</url>
   <scm>
