--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
     branches:
-    - master
+    - main
     - "4.3"
     - "3.0"
     paths-ignore:
@@ -10,7 +10,7 @@ on:
     - "release-notes/*"
   pull_request:
     branches:
-    - master
+    - main
 permissions:
   contents: read
 jobs:
