--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     -->
   <packaging>bundle</packaging>
   <name>Java UUID Generator</name>
-  <version>5.2.0</version>
+  <version>5.2.1-SNAPSHOT</version>
   <description>
 Java UUID Generator (JUG) is a Java library for generating
 Universally Unique IDentifiers, UUIDs (see http://en.wikipedia.org/wiki/UUID).
@@ -28,7 +28,7 @@ JUG supports 3 original official UUID generation methods as well as later additi
     <connection>scm:git:git://github.com/cowtowncoder/java-uuid-generator.git</connection>
     <url>https://github.com/cowtowncoder/java-uuid-generator</url>
     <developerConnection>scm:git:git@github.com:cowtowncoder/java-uuid-generator.git</developerConnection>
-    <tag>java-uuid-generator-5.2.0</tag>
+    <tag>java-uuid-generator-5.1.0</tag>
   </scm>
   <developers>
     <developer>
@@ -45,7 +45,7 @@ JUG supports 3 original official UUID generation methods as well as later additi
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>1.7.36</slf4j.version>
 
-    <project.build.outputTimestamp>2025-12-05T19:49:07Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-12-05T19:49:27Z</project.build.outputTimestamp>
   </properties>
   <licenses>
     <license>
